--- a/conFusion/src/app/menu/menu.component.html
+++ b/conFusion/src/app/menu/menu.component.html
@@ -20,7 +20,9 @@
     </mat-grid-list>
   </div>
 
-  <div flFlex *ngIf="selectedDish">
+  <app-dishdetail></app-dishdetail>
+
+  <!-- <div flFlex *ngIf="selectedDish">
     <mat-card>
       <mat-card-header>
         <h3> {{selectedDish.name | uppercase}} </h3>
@@ -34,6 +36,6 @@
         <button mat-button>SHARE</button>
       </mat-card-actions>
     </mat-card>
-  </div>
+  </div> -->
 
 </div>
