--- a/conFusion/src/app/dishdetail/dishdetail.component.html
+++ b/conFusion/src/app/dishdetail/dishdetail.component.html
@@ -7,36 +7,32 @@
     fxLayoutGap.xs="0">
 
   <div fxFlex="40">
-    <div>
-      <mat-card *ngIf="dish">
-        <mat-card-header>
-          <h3> {{dish.name | uppercase}} </h3>
-        </mat-card-header>
-        <img mat-card-image src={{dish.image}} alt={{dish.name}}>
-        <mat-card-content>
-          <p> {{dish.description}}</p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-        </mat-card-actions>
-      </mat-card>
-    </div> 
+    <mat-card *ngIf="dish">
+      <mat-card-header>
+        <h3> {{dish.name | uppercase}} </h3>
+      </mat-card-header>
+      <img mat-card-image src={{dish.image}} alt={{dish.name}}>
+      <mat-card-content>
+        <p> {{dish.description}}</p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+      </mat-card-actions>
+    </mat-card>
   </div>
 
   <div fxFlex="40">
     <div>
-      <h3> Comments </h3>
-    </div>
-    <div>
       <mat-list *ngIf="dish">
+        <h3> Comments </h3>
         <mat-list-item *ngFor="let comm of dish.comments">
           <span matLine> {{comm.comment}} </span>
-          <span matLine> {{comm.rating}} stars</span>
+          <span matLine> {{comm.rating}} Stars</span>
           <span matLine> -- {{comm.author}} {{comm.date | date}} </span>
         </mat-list-item>
       </mat-list>
-      </div>
+    </div>
   </div>
 
 </div>
