--- a/conFusion/src/app/home/home.component.html
+++ b/conFusion/src/app/home/home.component.html
@@ -15,6 +15,11 @@
   </mat-card-content>
 </mat-card>
 
+<div fxFlex [hidden]="dish">
+  <mat-spinner></mat-spinner>
+  <h4>Loading . . . Please Wait!</h4>
+</div>
+
 <mat-card *ngIf="promotion" fxFlex>
   <mat-card-header>
     <div mat-card-avatar></div>
@@ -28,6 +33,11 @@
     </p>
   </mat-card-content>
 </mat-card>
+
+<div fxFlex [hidden]="promotion">
+  <mat-spinner></mat-spinner>
+  <h4>Loading . . . Please Wait!</h4>
+</div>
 
 <mat-card *ngIf="leader" fxFlex>
   <mat-card-header>
@@ -45,5 +55,10 @@
 
   </mat-card-content>
 </mat-card>
+
+<div fxFlex [hidden]="leader">
+  <mat-spinner></mat-spinner>
+  <h4>Loading . . . Please Wait!</h4>
+</div>
 
 </div>
