--- a/conFusion/src/app/dishdetail/dishdetail.component.html
+++ b/conFusion/src/app/dishdetail/dishdetail.component.html
@@ -1,51 +1,52 @@
 <div class="container"
-    fxLayout="row"
-    fxLayout.sm="column"
-    fxLayout.xs="column"
-    fxLayoutAlign.gt-md="space-around center"
-    fxLayoutGap="10px" 
-    fxLayoutGap.xs="0">
+		fxLayout="row"
+		fxLayout.sm="column"
+		fxLayout.xs="column"
+		fxLayoutAlign.gt-md="space-around center"
+		fxLayoutGap="10px" 
+		fxLayoutGap.xs="0">
 
-  <div fxFlex="40" *ngIf="dish">
-    <mat-card>
-      <mat-card-header>
-        <h3> {{dish.name | uppercase}} </h3>
-      </mat-card-header>
-      <img mat-card-image src={{dish.image}} alt={{dish.name}}>
-      <mat-card-content>
-        <p> {{dish.description}}</p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button [routerLink]="['/dishdetail', prev]">
-          <span class="fa fa-chevron-left fa-lg"></span>
-        </button>
-        <button mat-button (click)="goBack()">BACK</button>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
-        <span class="flex-spacer"></span>
-        <button mat-button [routerLink]="['/dishdetail', next]">
-          <span class="fa fa-chevron-right fa-lg"></span>
-        </button>
-      </mat-card-actions>
-    </mat-card>
-  </div>
+	<div fxFlex="40" *ngIf="dish">
+		<mat-card>
+			<mat-card-header>
+				<h3> {{dish.name | uppercase}} </h3>
+			</mat-card-header>
+			<img mat-card-image src={{dish.image}} alt={{dish.name}}>
+			<mat-card-content>
+				<p> {{dish.description}}</p>
+			</mat-card-content>
+			<mat-card-actions>
+				<!-- TODO: Add loader on click on prev and next button -->
+				<button mat-button [routerLink]="['/dishdetail', prev]">
+					<span class="fa fa-chevron-left fa-lg"></span>
+				</button>
+				<button mat-button (click)="goBack()">BACK</button>
+				<button mat-button>LIKE</button>
+				<button mat-button>SHARE</button>
+				<span class="flex-spacer"></span>
+				<button mat-button [routerLink]="['/dishdetail', next]">
+					<span class="fa fa-chevron-right fa-lg"></span>
+				</button>
+			</mat-card-actions>
+		</mat-card>
+	</div>
 
-  <div fxFlex="40" *ngIf="dish">
-    <div>
-      <mat-list>
-        <h3> Comments </h3>
-        <mat-list-item *ngFor="let comm of dish.comments">
-          <span matLine> {{comm.comment}} </span>
-          <span matLine> {{comm.rating}} Stars</span>
-          <span matLine> -- {{comm.author}} {{comm.date | date}} </span>
-        </mat-list-item>
-      </mat-list>
-    </div>
-  </div>
+	<div fxFlex="40" *ngIf="dish">
+		<div>
+			<mat-list>
+				<h3> Comments </h3>
+				<mat-list-item *ngFor="let comm of dish.comments">
+					<span matLine> {{comm.comment}} </span>
+					<span matLine> {{comm.rating}} Stars</span>
+					<span matLine> -- {{comm.author}} {{comm.date | date}} </span>
+				</mat-list-item>
+			</mat-list>
+		</div>
+	</div>
 
-  <div fxFlex [hidden]="dish">
-    <mat-spinner></mat-spinner>
-    <h4>Loading . . . Please Wait!</h4>
-  </div>
+	<div fxFlex [hidden]="dish">
+		<mat-spinner></mat-spinner>
+		<h4>Loading . . . Please Wait!</h4>
+	</div>
 
 </div>
